# Project-Kakerou

./: .env.example  .gitignore  README.md  pyproject.toml
btom_engine/: __init__.py  baseline_scorer.py  claim_tracker.py  config.py  engine.py  fact_registry.py  interaction_context.py  liwc_signals.py  math_engine.py  novelty.py  preference_inference.py  relational_features.py  remote_llm.py  schema.py  semantic_review.py  sensor.py  sensor_calibration.py  speech_acts.py  strategic_classifier.py  weights.py
btom_engine/osint/: __init__.py  behavioral_baseline.py  claim_comparison.py  claim_extraction.py  dossier_store.py  evidence_schema.py  investigator.py  prior_integration.py  profile_extraction.py  providers.py  retrieval_manager.py  retrieval_router.py  source_registry.py  target_context.py  url_selection.py
cockpit/: analyst_helpers.py  app.py  block_normalizer.py  file_upload.py  llm_extractor.py  plotting.py  source_normalizer.py  transcript_parser.py  ui_components.py
cockpit/fixtures/: demo_transcript.json
tests/: conftest.py  test_analyst_helpers.py  test_block_normalizer.py  test_dossier_store.py  test_file_upload.py  test_fixtures.py  test_llm_extractor.py  test_math_engine.py  test_osint.py  test_preference_inference.py  test_source_normalizer.py  test_target_context.py  test_transcript_parser.py
tests/fixtures/: a_positive_profanity.json  b_direct_hostility.json  c1_paraphrase_play_dumb.json  c2_paraphrase_acting_clueless.json  d_severe_hostility.json  e_blame_hostility.json  g_neutral_vs_accusatory.json  h_multi_turn_adversarial.json  (+19 more)
(+6 files in other folders)
